[package]
name = "scuffle-future-ext"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A utility crate for working with futures."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-future-ext"
keywords = ["future", "async", "await"]

[dependencies]
tokio = { version = "1", features = ["time"] }
scuffle-workspace-hack.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "tokio::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_workspace_hack::*",
]
