[package]
name = "scuffle-future-ext"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A utility crate for working with futures."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-future-ext"
keywords = ["future", "async", "await"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
document-features = { optional = true, version = "0.2" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1" }
scuffle-workspace-hack.workspace = true
tokio = { features = ["time"], version = "1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
