[package]
name = "scuffle-h264"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-h264"
description = "A pure Rust H.264 header decoder."
keywords = ["h264", "video", "codec"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.5"
byteorder = "1.5"
scuffle-expgolomb.workspace = true
scuffle-bytes-util.workspace = true
scuffle-workspace-hack.workspace = true
nutype-enum.workspace = true

[dev-dependencies]
insta = "1.42"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "bytes::*",
  "byteorder::*",
]
