[package]
name = "scuffle-h265"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A pure Rust H.265 header decoder."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-h265"
keywords = ["h265", "video", "codec"]

[dependencies]
bytes = "1.5"
byteorder = "1.5"
scuffle-expgolomb.workspace = true
scuffle-bytes-util.workspace = true
scuffle-workspace-hack.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "bytes::*",
  "byteorder::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_expgolomb::*",
  "scuffle_bytes_util::*",
  "scuffle_workspace_hack::*",
]
