[package]
name = "scuffle-h265"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-h265"
description = "A pure Rust H.265 header decoder."
keywords = ["h265", "video", "codec"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
bitflags = "2.9.0"
byteorder = "1.5"
bytes = "1.5"
document-features = { optional = true, version = "0.2" }
nutype-enum = { path = "../nutype_enum", version = "0.1.3" }
scuffle-bytes-util = { path = "../bytes-util", version = "0.1.2" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1" }
scuffle-expgolomb = { path = "../expgolomb", version = "0.1.1" }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = "1.42"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
