[package]
name = "scuffle-http"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-http"
license = "MIT OR Apache-2.0"
description = "A high-performance HTTP server supporting HTTP/1.1, HTTP/2, and HTTP/3."
keywords = ["http", "server", "http1", "http2", "http3"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "scuffle-http-echo"
path = "examples/echo.rs"
required-features = ["default"]

[[example]]
name = "scuffle-http-echo-tls"
path = "examples/echo_tls.rs"
required-features = ["default", "tls-rustls", "http3"]

[[example]]
name = "scuffle-http-axum"
path = "examples/axum.rs"
required-features = ["default", "tls-rustls", "http3", "tower", "tracing"]

[dependencies]
tokio = { version = "1.43.0" }
thiserror = "2.0.11"
futures = { version = "0.3.31", default-features = false, features = ["alloc"]}
bon = "3.3.2"
pin-project-lite = "0.2.16"
scuffle-context.workspace = true

# HTTP parsing
http = "1.2.0"
http-body = "1.0.1"
bytes = "1.9.0"

# Tracing
tracing = { version = "0.1.41", optional = true }

# HTTP/1.1, HTTP/2
hyper = { version = "1.6.0", default-features = false, features = ["server"], optional = true }
hyper-util = { version = "0.1.10", default-features = false, features = ["server", "tokio"], optional = true }
libc = { version = "0.2.169", default-features = false, optional = true }

# QUIC + HTTP/3
quinn = { version = "0.11.6", default-features = false, features = ["platform-verifier", "runtime-tokio", "rustls-aws-lc-rs"], optional = true }
h3-quinn = { version = "0.0.9", default-features = false, optional = true }
h3 = { version = "0.0.7", default-features = false, optional = true }

# TLS
tokio-rustls = { version = "0.26.1", default-features = false, features = ["aws_lc_rs", "tls12"], optional = true }
rustls = { version = "0.23.21", default-features = false, features = ["aws_lc_rs", "std", "tls12"], optional = true }

# Tower Services
tower = { version = "0.5.2", default-features = false, features = ["make"], optional = true }

scuffle-workspace-hack.workspace = true

[dev-dependencies]
# The http3 feature requires a custom build flag (see .cargo/config.toml)
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "http2", "http3"] }
axum = { version = "0.8.1", features = ["ws"]}
rustls-pemfile = "2.2.0"
tokio-test = "0.4.4"
scuffle-future-ext.workspace = true

# For examples:
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
[features]
default = ["http1", "http2", "tower"]
tracing = ["dep:tracing", "quinn?/log", "h3-quinn?/tracing", "h3?/tracing", "tokio-rustls?/logging", "rustls?/logging"]
http1 = ["dep:hyper", "dep:hyper-util", "dep:libc", "hyper/http1", "hyper-util/http1"]
http2 = ["dep:hyper", "dep:hyper-util", "dep:libc", "hyper/http2", "hyper-util/http2"]
http3 = ["dep:quinn", "dep:h3-quinn", "dep:h3"]
tls-rustls = ["dep:tokio-rustls", "dep:rustls"]
http3-tls-rustls = ["http3", "tls-rustls"]
tower = ["dep:tower"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.xtask.powerset]
additive-features = ["tracing", "tower"]
ignore-features = ["http3"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "tokio::*",
  "thiserror::*",
  "futures::*",
  "bon::*",
  "pin_project_lite::*",
  "http::*",
  "http_body::*",
  "bytes::*",
  "tracing::*",
  "hyper::*",
  "hyper_util::*",
  "libc::*",
  "quinn::*",
  "h3_quinn::*",
  "h3::*",
  "tokio_rustls::*",
  "rustls::*",
  "tower::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_context::*",
  "scuffle_workspace_hack::*",
  "scuffle_future_ext::*",
]
