[package]
name = "scuffle-http"
version = "0.3.1"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-http"
license = "MIT OR Apache-2.0"
description = "A high-performance HTTP server supporting HTTP/1.1, HTTP/2, and HTTP/3."
keywords = ["http", "server", "http1", "http2", "http3"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "scuffle-http-echo"
path = "examples/echo.rs"
required-features = ["default"]

[[example]]
name = "scuffle-http-echo-tls"
path = "examples/echo_tls.rs"
required-features = ["default", "tls-rustls", "http3"]

[[example]]
name = "scuffle-http-axum"
path = "examples/axum.rs"
required-features = ["default", "tls-rustls", "http3", "tower", "tracing"]

[features]
default = ["http1", "http2", "tower"]
## Enables tracing support
tracing = [
  "dep:tracing",
  "quinn?/log",
  "h3-quinn?/tracing",
  "h3?/tracing",
  "tokio-rustls?/logging",
  "rustls?/logging",
]
## Enables http1 support
http1 = [
  "dep:hyper",
  "dep:hyper-util",
  "dep:libc",
  "hyper/http1",
  "hyper-util/http1",
]
## Enabled http2 support
http2 = [
  "dep:hyper",
  "dep:hyper-util",
  "dep:libc",
  "hyper/http2",
  "hyper-util/http2",
]
## Enables http3 support
http3 = ["dep:quinn", "dep:h3-quinn", "dep:h3"]
## Enables tls via rustls
tls-rustls = ["dep:tokio-rustls", "dep:rustls"]
## Alias for ["http3", "tls-rustls"]
http3-tls-rustls = ["http3", "tls-rustls"]
## Enables tower service support
tower = ["dep:tower"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
bon = "3.3.2"
futures = { default-features = false, features = ["alloc"], version = "0.3.31" }
pin-project-lite = "0.2.16"
scuffle-context = { path = "../context", version = "0.1.3" }
thiserror = "2.0.11"
tokio = { version = "1.43.0" }

# HTTP parsing
bytes = "1.9.0"
http = "1.2.0"
http-body = "1.0.1"

# Tracing
tracing = { optional = true, version = "0.1.41" }

# HTTP/1.1, HTTP/2
hyper = { default-features = false, features = ["server"], optional = true, version = "1.6.0" }
hyper-util = { default-features = false, features = [
  "server",
  "tokio",
], optional = true, version = "0.1.10" }
libc = { default-features = false, optional = true, version = "0.2.169" }

# QUIC + HTTP/3
h3 = { default-features = false, optional = true, version = "0.0.8" }
h3-quinn = { default-features = false, optional = true, version = "0.0.10" }
quinn = { default-features = false, features = [
  "platform-verifier",
  "runtime-tokio",
  "rustls-aws-lc-rs",
], optional = true, version = "0.11.6" }

# TLS
rustls = { default-features = false, features = [
  "aws_lc_rs",
  "std",
  "tls12",
], optional = true, version = "0.23.21" }
tokio-rustls = { default-features = false, features = [
  "aws_lc_rs",
  "tls12",
], optional = true, version = "0.26.1" }

# Tower Services
tower = { default-features = false, features = ["make"], optional = true, version = "0.5.2" }

document-features = { optional = true, version = "0.2" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }

scuffle-workspace-hack.workspace = true

[dev-dependencies]
# The http3 feature requires a custom build flag (see .cargo/config.toml)
axum = { features = ["ws"], version = "0.8.1" }
reqwest = { default-features = false, features = [
  "http2",
  "http3",
  "rustls-tls",
], version = "0.12.15" }
rustls-pemfile = "2.2.0"
scuffle-future-ext = { path = "../future-ext", version = "0.1.3" }
tokio-test = "0.4.4"

# For examples:
tokio = { features = ["full"], version = "1.43.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { features = ["env-filter"], version = "0.3.19" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["tracing", "tower", "docs"]
ignore-features = ["http3"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
