[package]
name = "scuffle-metrics"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-metrics"
license = "MIT OR Apache-2.0"
description = "Helper crate to instrument your code with metrics."
keywords = ["metrics", "prometheus", "opentelemetry"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "scuffle-metrics-derive"
path = "examples/derive.rs"
required-features = ["default"]

[[example]]
name = "scuffle-metrics-prometheus"
path = "examples/prometheus.rs"
required-features = ["default"]

[dependencies]
prometheus-client = { version = "0.23", optional = true }
opentelemetry = { version = "0.29", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", default-features = false, features = ["metrics"] }
scuffle-metrics-derive.workspace = true
tracing = { version = "0.1", optional = true }
parking_lot = "0.12"
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = "1.42.0"
postcompile = { workspace = true, features = ["prettyplease"] }

# For examples:
tokio = { version = "1", features = ["full"] }
opentelemetry-stdout = "0.29"

[features]
default = ["prometheus"]
internal-logs = ["dep:tracing"]
prometheus = ["dep:prometheus-client"]
tracing = ["internal-logs", "dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.xtask.powerset]
additive-features = [
    "prometheus",
    "tracing",
    "internal-logs",
    "default",
]
