[package]
name = "scuffle-metrics"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-metrics"
license = "MIT OR Apache-2.0"
description = "Helper crate to instrument your code with metrics."
keywords = ["metrics", "prometheus", "opentelemetry"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "scuffle-metrics-derive"
path = "examples/derive.rs"
required-features = ["default"]

[[example]]
name = "scuffle-metrics-prometheus"
path = "examples/prometheus.rs"
required-features = ["default"]

[features]
default = ["prometheus"]
## Enables prometheus support
prometheus = ["dep:prometheus-client"]
## Enables tracing support
tracing = ["dep:tracing"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
prometheus-client = { version = "0.23", optional = true }
opentelemetry = { version = "0.29", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", default-features = false, features = ["metrics"] }
scuffle-metrics-derive = "0.1.1"
tracing = { version = "0.1", optional = true }
parking_lot = "0.12"
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = "1.42.0"
postcompile = "0.2.0"

# For examples:
tokio = { version = "1", features = ["full"] }
opentelemetry-stdout = "0.29"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.xtask.powerset]
additive-features = ["prometheus", "tracing", "internal-logs", "default", "docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"
metrics = "."

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
