[package]
name = "scuffle-mp4"
version = "0.1.2"
edition = "2024"
description = "A pure Rust MP4 parser and writer."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-mp4"
license = "MIT OR Apache-2.0"
keywords = ["mp4", "video", "codec"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
fixed = "1.24"
paste = "1.0"


scuffle-h264 = "0.2.0"
scuffle-h265 = "0.2.0"
scuffle-av1 = "0.1.2"
scuffle-aac = "0.1.2"
scuffle-bytes-util = "0.1.2"
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
