[package]
name = "scuffle-mp4"
version = "0.1.3"
edition = "2024"
description = "A pure Rust MP4 parser and writer."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-mp4"
license = "MIT OR Apache-2.0"
keywords = ["mp4", "video", "codec"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
document-features = { optional = true, version = "0.2" }
fixed = "1.24"
paste = "1.0"
scuffle-aac = { path = "../aac", version = "0.1.3" }
scuffle-av1 = { path = "../av1", version = "0.1.3" }
scuffle-bytes-util = { path = "../bytes-util", version = "0.1.3" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-h264 = { path = "../h264", version = "0.2.1" }
scuffle-h265 = { path = "../h265", version = "0.2.1" }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde = { features = ["derive"], version = "1" }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
