[package]
name = "openapiv3_1"
version = "0.1.0"
edition = "2024"
description = "OpenAPI 3.1.x bindings for rust"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/openapiv3_1"
license = "MIT OR Apache-2.0"
keywords = ["openapi", "jsonschema", "json"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
serde = "1"
serde_derive = "1"
indexmap = { version = "2", features = ["serde"] }
ordered-float = { version = "5", features = ["serde"] }
serde_json = "1"
bon = "3.6.3"
serde_norway = { version = "0.9", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }

[features]
debug = []
yaml = ["dep:serde_norway"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs"]
