[package]
name = "openapiv3_1"
version = "0.1.3"
edition = "2024"
description = "OpenAPI 3.1.x bindings for rust"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/openapiv3_1"
license = "MIT OR Apache-2.0"
keywords = ["openapi", "jsonschema", "json"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]
## Enable derive(Debug) on all types
debug = []
## Enables `to_yaml` function.
yaml = ["dep:serde_norway"]

[dependencies]
bon = "3.6.3"
document-features = { optional = true, version = "0.2" }
indexmap = { features = ["serde"], version = "2" }
ordered-float = { features = ["serde"], version = "5" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-workspace-hack.workspace = true
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_norway = { optional = true, version = "0.9" }

[dev-dependencies]
insta = { features = ["json", "redactions"], version = "1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
