[package]
name = "postcompile"
version = "0.1.1"
edition = "2024"
build = "build.rs"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/postcompile"
license = "MIT OR Apache-2.0"
description = "Helper crate for post-compiling Rust code."
keywords = ["postcompile", "snapshot", "test", "proc-macro"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(trybuild_no_target)', 'cfg(postcompile_no_target)', 'cfg(coverage_nightly)'] }

[dependencies]
serde_json = "1.0"
cargo_metadata = "0.19.1"
cargo-platform = "0.1"
target-triple = "0.1"
serde = { version = "1.0", features = ["derive"] }
prettyplease = { version = "0.2", optional = true }
syn = { version = "2", features = ["full"] }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = "1.42.0"

[features]
prettyplease = ["dep:prettyplease"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "serde_json::*",
  "cargo_metadata::*",
  "cargo_platform::*",
  "target_triple::*",
  "serde_derive::*",
  "serde::*",
  "prettyplease::*",
  "syn::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_workspace_hack::*",
]
