[package]
name = "postcompile"
version = "0.2.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/postcompile"
license = "MIT OR Apache-2.0"
description = "Helper crate for post-compiling Rust code."
keywords = ["postcompile", "snapshot", "test", "proc-macro"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(trybuild_no_target)', 'cfg(postcompile_no_target)', 'cfg(coverage_nightly)', 'cfg(valgrind)'] }

[dependencies]
prettyplease = "0.2"
syn = "2"
toml = "0.8"
cargo-manifest = "0.19"
cargo_metadata = "0.19"
target-triple = "0.1"
scuffle-workspace-hack.workspace = true

[dev-dependencies]
insta = "1.42.0"
