[package]
name = "scuffle-pprof"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-pprof"
license = "MIT OR Apache-2.0"
description = "Helper crate for adding pprof support to your application."
keywords = ["pprof", "cpu", "profiling", "flamegraphs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
scuffle-workspace-hack.workspace = true

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.14", features = ["prost-codec"] }
flate2 = "1.0"
thiserror = "2"
