[package]
name = "scuffle-pprof"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-pprof"
license = "MIT OR Apache-2.0"
description = "Helper crate for adding pprof support to your application."
keywords = ["pprof", "cpu", "profiling", "flamegraphs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "scuffle-pprof-cpu"
path = "examples/cpu.rs"

[dependencies]
scuffle-workspace-hack.workspace = true

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.14", features = ["prost-codec"] }
flate2 = "1.0"
thiserror = "2"

[dev-dependencies]
# For examples:
rand = "0.9"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "pprof::*",
  "flate2::*",
  "thiserror::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_workspace_hack::*",
]
